tests/compile-fail/no_action_with_state_data.stderr
error[E0423]: expected value, found builtin type `u32`
  --> tests/compile-fail/no_action_with_state_data.rs:14:35
   |
14 |         *State1 + Event1 = State2(u32), //~ This state has data associated, but not action is define here to provide it.
   |                                   ^^^ not a value

error[E0618]: expected function, found `States`
  --> tests/compile-fail/no_action_with_state_data.rs:12:1
   |
12 | / statemachine! {
13 | |     transitions: {
14 | |         *State1 + Event1 = State2(u32), //~ This state has data associated, but not action is define here to provide it.
   | |                            ------ `States::State2` defined here
15 | |     }
16 | | }
   | |_^ call expression requires function
   |
   = note: this error originates in the macro `statemachine` (in Nightly builds, run with -Z macro-backtrace for more info)
